# Simo

./: .gitignore  CMakeLists.txt  README.md  flake.nix  sgconfig.yml
.github/workflows/: coverage.yml  publish_docs.yml  verify.yml  verify_guided_examples.yml
docs/: README.md
docs/guided_examples/: README.md  build_all_examples.sh  flake.nix
docs/guided_examples/1_FirstModule_and_SimoSim/: CMakeLists.txt  FirstModule.cc  README.md  flake.nix  system_config.yaml
docs/guided_examples/2_Ports_and_SimoSim/: README.md  system_config.yaml
docs/guided_examples/3_Custom_Main/: CMakeLists.txt  CustomMain.cc  README.md
docs/guided_examples/4_Nested_Modules/: CMakeLists.txt  NestedModule.cc  README.md
docs/tutorial/: README.md
include/Simo/: Simo.h
include/Simo/collection/: Collection.h
include/Simo/compiler/: BoostTypeIndexRuntimeCast.h  BoostTypeIndexRuntimeCast.hh  Compiler.h
include/Simo/core/: Context.h  InitializationStatus.h  Log.h  Payload.h  Time.h
include/Simo/core/internal/: RadixHeap.h
include/Simo/module/: Module.h
include/Simo/module/core/: Collector.h  CoreModules.h
include/Simo/parameter/: Parameter.h  ParameterTrie.h
include/Simo/port/: Port.h
include/Simo/statistics/: Count.h  StatMapper.h  StatOutStream.h  Statistic.h  Statistics.h
src/SimoSim/: Config.h  Config.hh  SimoSim.cc
src/collection/: Collection.cc
src/core/: Context.cc  InitializationStatus.cc  Log.cc  RadixHeap.cc  Time.cc
src/module/: Module.cc
src/module/core/: CoreModules.cc
src/parameter/: Parameter.cc  ParameterTrie.cc
src/statistics/: Count.cc  StatMapper.cc
support/ast-grep/: no-default-arguments.yaml
support/cmake/: SimoConfig.cmake
support/ides/clion/: README.md  nix-cmake.sh  nix-run.sh  setup-symlinks.sh
support/scripts/: cpp-check-format.sh  run-ast-grep.sh  verify-coverage.sh
tests/Simo/: MainLoopTests.cc  SimulationContextTest.cc  UnitTestMain.cc
tests/SimoSim/: test_config.yaml
tests/collection/: CollectionTest.cc  PingPongCollection.cc
tests/core/RadixHeap/: RadixHeapTest.cc
tests/core/TimePeriod/: TimePeriodTest.cc
tests/module/: ModuleTest.cc
tests/parameter/: ParameterTest.cc
tests/port/: PortTest.cc
tests/statistics/: StatisticsTest.cc
tests/support/: BoostInclude.h
